[project]
name = "design-pattern"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nard-K", email = "kou07065432185@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.1.3", "mypy>=1.6.1"]

[tool.rye.scripts]
"format" = "ruff format src/"
"lint" = "ruff --fix src/"

[tool.hatch.metadata]
allow-direct-references = true


[tool.ruff]
# blackと同じにする
line-length = 88
src = ["src"]
select = ["ALL"]
ignore = [
    # docstring rules
    "D",
    # future annotation rules
    "FA",
    # print rules
    "T",
    # conflict ruff formatter
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.format]
# Enable preview style formatting.
preview = true

[tool.mypy]
# エラー時のメッセージを詳細表示
show_error_context = true
# エラー発生箇所の行数/列数を表示
show_column_numbers = true
# サードパーティ製モジュールの型チェックを無視
ignore_missing_imports = true
# 関数の引数/戻り値に型指定必須
disallow_untyped_defs = true
# デフォルト引数にNoneを取る場合、型アノテーションにOptional必須
no_implicit_optional = true
# 戻り値がAny型ではない関数の戻り値がAny型のとき警告
warn_return_any = true
# 冗長なキャストに警告
warn_redundant_casts = true
